web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-function-expression-rest/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,19)
1|(function(...x) { "use strict"; })
 |                 ^
